--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://keen-shannon-5d200e.netlify.app"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "devise"
